Fix horizontal scrollbar; update overlay colors

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -21,7 +21,6 @@
   z-index: var(--page-layer);
 
   position: relative;
-  width: 100vw;
   display: flex;
   justify-content: center;
 }
