--- a/styles/project.module.css
+++ b/styles/project.module.css
@@ -17,7 +17,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.8);
+  background: var(--overlay-bg);
   /* backdrop-filter: brightness(1.5) blur(20px) saturate(1.8); */
 }
 
